--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-lts-trusty (3.13.0.33.29) precise; urgency=medium
+
+  * Ubuntu-lts-3.13.0-33
+
+ -- Brad Figg <brad.figg@canonical.com>  Wed, 30 Jul 2014 14:28:16 -0700
+
 linux-meta-lts-trusty (3.13.0.32.28) precise; urgency=medium
 
   * Ubuntu-lts-3.13.0-32
